# obesity-cdss

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.api  Dockerfile.web  LICENSE  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.streamlit/: config.toml
notebooks/: 01-exploratory-data-analysis.ipynb
src/obesity_cdss/: config.py
src/obesity_cdss/api/: main.py  routers.py  schemas.py  services.py
src/obesity_cdss/api/static/: styles.css
src/obesity_cdss/ml/: processing.py  train.py
src/obesity_cdss/utils/: data_dictionary.json  logging.py  theme.py
src/obesity_cdss/web/: api_client.py  app.py  report.py  utils.py
src/obesity_cdss/web/views/: insights.py  metrics.py  prediction.py
tests/: conftest.py  test_api.py  test_processing.py  test_training.py
